# MooreAndMealy

./: MooreAndMealy.sln  README.md
MooreAndMealy/: CMakeLists.txt  InputAndOutput.cpp  InputAndOutput.h  MooreAndMealy.vcxproj  MooreAndMealy.vcxproj.filters  Transform.cpp  Transform.h  input.csv  main.cpp  mealy.csv  moore.csv  output.csv  stdafx.h
